Fixed footer to the bottom of the page on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,5 +28,10 @@
 body {
   margin: 0;
   background-color: $hue_main-dark;
+}
+
+app-root {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   min-height: 100vh;
 }
